# ChangeLog for mail-client/evolution
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*evolution-2.30.3-r1 (10 Sep 2010)
*evolution-2.30.2-r1 (10 Sep 2010)
*evolution-2.30.1.2-r2 (10 Sep 2010)

  10 Sep 2010; Hans de Graaff <graaff@gentoo.org>
  +evolution-2.30.1.2-r2.ebuild, +files/evolution-2.30.1.2-configure.patch,
  +files/evolution-2.30.1.2-sha2.patch, +evolution-2.30.2-r1.ebuild,
  +files/evolution-2.30.2-call-function.patch,
  +files/evolution-2.30.2-drag-message.patch,
  +files/evolution-2.30.2-proper-faq.patch, +evolution-2.30.3-r1.ebuild,
  +files/evolution-2.30.3-fix-linking-issues-in-libeshell.patch:
  Track evolution 2.30.3

*evolution-2.28.3.1-r2 (06 Jun 2010)

  06 Jun 2010; Hans de Graaff <graaff@gentoo.org>
  +files/evolution-2.28.0-automagic-plugins.patch,
  +files/evolution-2.28.0-delete-key.patch, +evolution-2.28.3.1-r2.ebuild,
  +files/evolution-2.28.3.1-allow-setting-alarms_1.patch,
  +files/evolution-2.28.3.1-allow-setting-alarms_2.patch,
  +files/evolution-2.28.3.1-allow-setting-alarms_3.patch,
  +files/evolution-2.28.3.1-attachment-bar-RTL.patch,
  +files/evolution-2.28.3.1-unknown-attachment-size.patch, +files/evo.patch,
  +metadata.xml:
  Own version of evolution supporting SHA-2 signatures.
