@@ -15,21 +15,14 @@ AUX evolution-2.30.2-call-function.patch 1045 RMD160 9c5e88bd2d1aba2c1250c0e3b21
 AUX evolution-2.30.2-drag-message.patch 4840 RMD160 dd810044c7c3d1143af1fcbcbde3c37ee986a1e7 SHA1 c64e77ba58db7ee6e522005467effe852cb0e8c6 SHA256 1454896c1dd1a10b6a4176e8b9d150821c7a5f292dc4a711085df431cd4a31d2
 AUX evolution-2.30.2-proper-faq.patch 671 RMD160 9dccbea8db2c0433bb42bda60ad5caf88911ee51 SHA1 e3f97c3d72791fd7341291fc802e2c2b092a80aa SHA256 f0eb5bfb39bb2c0e04d0f8ff6ccb4fe884a82cd2084f66d0417734080233fad6
 AUX evolution-2.30.3-fix-linking-issues-in-libeshell.patch 870 RMD160 12d6fe68f2c91f5be97057a2324946eb4ce90a08 SHA1 f0e4310ca1124481373fb5760b15ccbada67cc41 SHA256 4ee4ca24cd3ff8bb27b03d262b0bb4ff8953a3973f04044984beaf2804c3d07c
-DIST evolution-2.28.3.1.tar.bz2 29765375 RMD160 442c7b472caf94ba0aa1abbe253b810d15911a4f SHA1 412c8be73e483444ad69a4ad8c15b0db9520fe0a SHA256 9fda41b0994b1bb8d119f594597f77bb4af1a883588a39f7a81ec7a2eb18f5fd
-DIST evolution-2.30.1.2-patches.tar.bz2 26702 RMD160 f3468f2f6bb8ac9ee6add0b97fd6dbeeb36a5d76 SHA1 9054e255b4658384bf56968770ecd43ff3e6fc11 SHA256 f4d3581b323c88a42cacc93ffeddcd413c8cabc0f227e8b36b80fed6438ede12
-DIST evolution-2.30.1.2.tar.bz2 30681129 RMD160 33f71e2c8b8afdc300202924afe398f4a40c3796 SHA1 f1e100ff68f9454d5adafd6420577c655971b69e SHA256 8b946914e53135edf89f9ddb8667d0ca3d76d37d8c622888befd65b2c4d3ce24
-DIST evolution-2.30.2.tar.bz2 32570501 RMD160 c1b5703bc241a2dee20f94e60e7c9995c8cce841 SHA1 14ddccbf33eb86c976899eccea6ae1fb565ea9ca SHA256 470d12c0de9cae2dc0275152a356150c7a57339e6feca77f43508bd7d1f04d83
 DIST evolution-2.30.3.tar.bz2 32555386 RMD160 b79e3f6ba181033a9add979de8b6d518d451322c SHA1 f62e1dea59243242f626cc73ffdd68df28cedd57 SHA256 8c47e93ff5aedfad39d4224ae0751a938ccb7d2a2bcd407513cf1331c51b9cab
-EBUILD evolution-2.28.3.1-r2.ebuild 5386 RMD160 1dfca3c134ec558171a743d241f8e4a908cc1db0 SHA1 69184bc0495c89218750ef9445bf6a46539857d9 SHA256 107b2805b1fe2a2abe4144c1edc0b60df2b5481d78b9702767ad31d1000b0708
-EBUILD evolution-2.30.1.2-r2.ebuild 4609 RMD160 5a6e3291c41840ab1b989c3530db1f4ae1efa980 SHA1 a506c99bbf4ffbbcef4b5933197a9a755043172b SHA256 00e44d8caadf7b9d4f5977fa6349c0d0ffb37cf68eebdf549cc9c386e10f74ca
-EBUILD evolution-2.30.2-r1.ebuild 4739 RMD160 42e299cd4082b4e9379ee099c5c0e55295695add SHA1 04463529a5f5a2ac4615664958a5a8b1c84894f4 SHA256 e0f2063412e21710d84b213f4d8b90c01d92c29005f4e90d6a667e1f85ca85b7
 EBUILD evolution-2.30.3-r1.ebuild 4859 RMD160 9248d6c39a4c97b13e61590d9905345f336289ec SHA1 c2ea6868e55d4010f064cd7fb26017f94860ef0a SHA256 787a4c4476a88f4e02d1198a807af9bc30bed4070c4362f83546d0addbb6e389
-MISC ChangeLog 1275 RMD160 efe848802ae8938a6eafac9faea617f2baf3877a SHA1 dbd6c3363125fbbcb00afed4c4f48b5c77df071a SHA256 dbf90fc58fa8f5dd46e74e363a30eb971c6d1c3d1517a6343c6ab5c901c9ad48
+MISC ChangeLog 1444 RMD160 62dd10ab7c0cb850a3c9f0044c142e16fd8e9ec7 SHA1 0282971cf96c4e135f81c01e660d82fab523bcab SHA256 0e1cf568c50a6e67851cfa65ed34348d681923df08f27e29e3f216dd50010d7a
 MISC metadata.xml 222 RMD160 c395116c51764efaa671a0f89a7d8992ecbe7304 SHA1 2095e0ced2657346964271e45cc69027b0ccd49d SHA256 0adb6b2a2a8cc78f3d28b8b629db9d9e5731f21da86168ae88eeadc8b82d3225
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAkyKF8MACgkQZihJkut28SviRwEAqg8UAPVDMV42DkGycRZaYpZ+
-9DhVTvNG7pRe3m14Q6oA/jf2trVffgGSx5wY2KSw119iyfaz1Ia1BiYH1WMWQKne
-=OjFn
+iF4EAREIAAYFAky79mQACgkQZihJkut28SuBhQD+P6ZWFIZmo5RwNQTJPDhRfais
+4/JjnlBAy75ZgsuU//EBAL4Bg2myR1BBTXT3yNTgExz6KTw0IDqnhLRvGmm1iZxH
+=OJ0F
 -----END PGP SIGNATURE-----
