@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Oct 2010; Hans de Graaff <graaff@gentoo.org>
+  -evolution-2.28.3.1-r2.ebuild, -evolution-2.30.1.2-r2.ebuild,
+  -evolution-2.30.2-r1.ebuild:
+  Remove old versions.
+
 *evolution-2.30.3-r1 (10 Sep 2010)
 *evolution-2.30.2-r1 (10 Sep 2010)
 *evolution-2.30.1.2-r2 (10 Sep 2010)
